--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -203,13 +203,15 @@
     	}
     \DeclareSIUnit[quantity-product = {\,}]
 		\bar{\text{bar}}
+	\DeclareSIUnit[quantity-product = {\,}]
+		\jour{\text{j}}
 \usepackage{multirow}
 %\usepackage{minitoc}
 \usepackage{etoc}
 \usepackage{titlesec}
 
 \setcounter{secnumdepth}{5}
-\setcounter{tocdepth}{4}
+\setcounter{tocdepth}{3}
 
 \usepackage[
 	style=numeric-comp,
