--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,39 @@
 
+@article{poignand_test-bench_2022,
+	title = {Test-bench for the experimental characterization of porous material used in thermoacoustic refrigerators},
+	volume = {152},
+	issn = {0001-4966, 1520-8524},
+	url = {https://pubs.aip.org/jasa/article/152/5/2804/2839844/Test-bench-for-the-experimental-characterization},
+	doi = {10.1121/10.0015051},
+	abstract = {The design of thermoacoustic coolers involves an adequate modeling of the thermoacoustic core's performance, which requires, in particular, a precise knowledge of their thermo-physical properties. Materials such as wire mesh stacks, foams, or compressed fibrous media are hard to describe, and their thermo-physical properties are rarely well enough quantified. Moreover, the classical linear thermoacoustic theory is not sufficient to accurately describe the performance of these materials. This paper deals with the experimental performance characterization of various materials for thermoacoustic heat pumping. A dedicated experimental test-bench has been specially developed, which is composed of two loudspeakers placed at opposite ends of a waveguide containing the porous material and a feedback loop to control the acoustic field in the porous material. Its originality is attributable to the possibility of identifying the optimal acoustic field, specific to each material, that maximizes the temperature difference at the ends of the material. Moreover, a specific protocol is implemented to access and compare the thermoacoustic heat flux through various materials at these optimal acoustic fields. Comparison of the experimental and theoretical results shows a reasonable agreement.},
+	pages = {2804--2815},
+	number = {5},
+	journaltitle = {The Journal of the Acoustical Society of America},
+	author = {Poignand, Gaelle and Olivier, Come and Penelet, Guillaume},
+	urldate = {2025-02-28},
+	date = {2022-11-01},
+	langid = {english},
+}
+
+@article{poignand_optimal_2007,
+	title = {Optimal acoustic fields in compact thermoacoustic refrigerators},
+	volume = {68},
+	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {0003682X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0003682X06000697},
+	doi = {10.1016/j.apacoust.2006.03.009},
+	abstract = {Thermoacoustic refrigerators have been developed during the last 15 years, employing quasistanding resonant acoustic waves inside ﬂuid-ﬁlled cavities to transfer heat along a stack region. Because higher eﬃciency can be reached when a signiﬁcant travelling wave component exists in the resonator, speciﬁc resonant thermoacoustic devices have been designed allowing to adjust more or less the ratio of travelling and standing wave components. However, the acoustic pressure ﬁeld and the particle velocity ﬁeld do not appear to be the optimal ones, for the thermal quantities of interest. Thus, it is the aim of the paper to present a new kind of thermoacoustic standing wave-like device which allows to control easily and independently the pressure ﬁeld and the particle velocity ﬁeld, after investigating the optimal acoustic ﬁeld, in the stack region, for the main parameters of interest, i.e. the temperature gradient, the thermoacoustic heat ﬂow and the coeﬃcient of performance.},
+	pages = {642--659},
+	number = {6},
+	journaltitle = {Applied Acoustics},
+	shortjournal = {Applied Acoustics},
+	author = {Poignand, Gaëlle and Lihoreau, Bertrand and Lotton, Pierrick and Gaviot, Etienne and Bruneau, Michel and Gusev, Vitaly},
+	urldate = {2025-02-28},
+	date = {2007-06},
+	langid = {english},
+	file = {Poignand et al. - 2007 - Optimal acoustic fields in compact thermoacoustic .pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\6AZS7JKW\\Poignand et al. - 2007 - Optimal acoustic fields in compact thermoacoustic .pdf:application/pdf},
+}
+
 @article{tan_new_2024,
 	title = {A new investigation on permeability of multilayer stacked screen wick},
 	volume = {158},
