--- a/fig/fig_TCdansNoyau/tex/fig_TCdansNoyau.tex
+++ b/fig/fig_TCdansNoyau/tex/fig_TCdansNoyau.tex
@@ -1,12 +1,12 @@
-\begin{tikzpicture}[scale=.2]
-	\def\rCHX{14cm};
+\begin{tikzpicture}[scale=1/3]
+	\def\rCHX{7cm};
 	\def\lCHX{.7cm};
-	\def\rREG{14.8cm};
+	\def\rREG{7.4cm};
 	\def\lREG{3.9cm};
-	\def\rAHX{11cm};
+	\def\rAHX{5.5cm};
 	\def\lAHX{2.3cm};
-	\def\rRIX{10.8cm};
-	\def\rCONE{16.4cm};
+	\def\rRIX{5.4cm};
+	\def\rCONE{8.2cm};
 	
 	
 	\fill[pattern=horizontal lines,pattern color=MatlabOrange,draw=black] (0,-\rAHX) rectangle ++(\lAHX,2*\rAHX);
