--- a/fig/fig_dKdV/tex/fig_dKdV.tex
+++ b/fig/fig_dKdV/tex/fig_dKdV.tex
@@ -15,8 +15,8 @@
     grid=both, minor tick num=10, 
     grid style={line width=.1pt, draw=gray!10},
     major grid style={line width=.2pt,draw=gray!50},
-    xlabel={Fréquence $f$ [\unit{\Hz}]},
-    ylabel={\'Epaisseurs de couches limites $\delta_{\kappa,\nu}$ [\unit{\m}]},
+    xlabel={Fréquence $f$ (\unit{\Hz})},
+    ylabel={\'Epaisseurs de couches limites $\delta_{\kappa,\nu}$ (\unit{\m})},
     xmin=0,xmax=75,ymin=0,ymax=.5/1000,
     xtick={0,25,50,75,100},
     extra x ticks={47},
