--- a/fig/fig_TenuePressionStatique/tex/fig_TenuePressionStatique.tex
+++ b/fig/fig_TenuePressionStatique/tex/fig_TenuePressionStatique.tex
@@ -12,8 +12,8 @@
     grid=both, minor tick num=10, 
     grid style={line width=.1pt, draw=gray!10},
     major grid style={line width=.2pt,draw=gray!50},
-    xlabel={Temps (\unit{\jour})},
-    ylabel={Pression statique (\unit{\pascal})},
+    xlabel={Temps $t$ (\unit{\jour})},
+    ylabel={Pression statique $p_0$ (\unit{\pascal})},
 %    xmin=0,xmax=75,ymin=0,ymax=.5/1000,
 %    xtick={0,25,50,75,100}, ytick={0,1e-4,...,10e-4},
     scaled y ticks = false,
